# event-management-system

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: catchers.rs  errors.rs  fairings.rs  main.rs  state.rs
crates/api/src/guards/: auth_user.rs  mod.rs  roles.rs
crates/api/src/request/: booking_requests.rs  event_requests.rs  mod.rs  refund_requests.rs
crates/api/src/routes/: mod.rs  refunds.rs  tickets.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs
crates/application/src/booking/: commands.rs  handlers.rs  queries.rs  query_handlers.rs
crates/application/src/dto/: booking_dto.rs  event_dto.rs  mod.rs  refund_dto.rs  ticket_dto.rs
crates/application/src/event/: commands.rs  handlers.rs  queries.rs  query_handlers.rs
crates/application/src/ports/: mod.rs  notification.rs  payment_gateway.rs  refund_service.rs
crates/application/src/refund/: commands.rs  handlers.rs  mod.rs  queries.rs  query_handlers.rs
crates/application/src/ticket/: commands.rs  handlers.rs  mod.rs  queries.rs  query_handlers.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/booking/: aggregate.rs  events.rs  mod.rs  repository.rs  value_objects.rs
crates/domain/src/event/: aggregate.rs  events.rs  mod.rs  repository.rs  ticket_category.rs  value_objects.rs
crates/domain/src/refund/: aggregate.rs  events.rs  repository.rs  value_objects.rs
crates/domain/src/shared/: domain_event.rs  errors.rs  mod.rs  value_objects.rs
crates/domain/src/ticket/: entity.rs  events.rs  mod.rs  repository.rs  value_objects.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/persistence/: booking_repository.rs  db.rs  event_repository.rs  mappers.rs  mod.rs  models.rs  refund_repository.rs  ticket_repository.rs
crates/infrastructure/src/services/: mod.rs  notification.rs  payment_gateway.rs  refund_service.rs
migrations/: 20240001_create_enums.sql  20240002_create_events.sql  20240003_create_ticket_categories.sql  20240004_create_bookings.sql  20240005_create_tickets.sql  20240006_create_refunds.sql
