[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { workspace = true }
infrastructure = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
