[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
application = { workspace = true }
infrastructure = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
