[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
