[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }

[lints]
workspace = true
