[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
application = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
